--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^5.0.0-beta1",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
@@ -25,8 +25,10 @@
     },
     "dependencies": {
         "bootstrap-dropdown-hover": "^4.2.0",
+        "bootstrap-icons": "^1.2.1",
         "element-ui": "^2.14.1",
         "feather-icons": "^4.28.0",
+        "masonry-layout": "^4.2.2",
         "swiper": "^6.3.5",
         "venobox": "^1.9.1",
         "vue-tel-input": "^4.4.2"
